melhoria na estrutura

--- a/assets/style/components/_form.scss
+++ b/assets/style/components/_form.scss
@@ -2,7 +2,6 @@ html, body {
     height: 100%;
 }
 
-.form-container {
-    max-width: 400px;
-    padding: 1rem;
+.login-container {
+    margin-top: 100px;
 }
