--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2,6 +2,10 @@ html, body {
   height: 100%;
 }
 
+body {
+  color: aqua;
+}
+
 .login-container {
   margin-top: 100px;
 }/*# sourceMappingURL=style.css.map */
